--- a/src/comtab.html
+++ b/src/comtab.html
@@ -18,5 +18,7 @@
   var tab1 = comtab.createTab($('<a>tab1</a>'), $('<div>content1</div>'))
   var tab2 = comtab.createTab($('<a>tab2</a>'), $('<div>content2</div>'))
   var tab3 = comtab.createTab($('<a>tab3</a>'), $('<div>content3</div>'))
+  var tab4 = comtab.createTab($('<a>tab4</a>'), $('<div>content4</div>'))
   comtab.createPane([tab1, tab2, tab3]).mount()
+  var pane = comtab.createPane([tab4]).setPosition({left: 200, top: 200}).mount()
 </script>
