--- a/src/comtab.html
+++ b/src/comtab.html
@@ -8,17 +8,42 @@
   <link rel="stylesheet" href="./comtab.css">
 </head>
 <body>
-
+  <button id="clearJSONConf">clear</button>
+  <p id="JSONConfContent"></p>
 </body>
 </html>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/jqueryui/1.12.0/jquery-ui.js"></script>
 <script src="./comtab.js"></script>
 <script>
-  var tab1 = comtab.createTab($('<a>tab1</a>'), $('<div>content1</div>'))
-  var tab2 = comtab.createTab($('<a>tab2</a>'), $('<div>content2</div>'))
-  var tab3 = comtab.createTab($('<a>tab3</a>'), $('<div>content3</div>'))
-  var tab4 = comtab.createTab($('<a>tab4</a>'), $('<div>content4</div>'))
-  comtab.createPane([tab1, tab2, tab3]).mount()
-  var pane = comtab.createPane([tab4]).setPosition({left: 200, top: 200}).mount()
+  var tab1 = comtab.createTab($('<a>tab1</a>'), $('<div>content1</div>'), {tag: 'tab1'})
+  var tab2 = comtab.createTab($('<a>tab2</a>'), $('<div>content2</div>'), {tag: 'tab2'})
+  var tab3 = comtab.createTab($('<a>tab3</a>'), $('<div>content3</div>'), {tag: 'tab3'})
+  var tab4 = comtab.createTab($('<a>tab4</a>'), $('<div>content4</div>'), {tag: 'tab4'})
+
+  var tabMap = {
+    tab1: tab1,
+    tab2: tab2,
+    tab3: tab3,
+    tab4: tab4
+  }
+
+  var jsonConfInLocalStorage = localStorage.getItem('JSONConf')
+
+  if (jsonConfInLocalStorage) {
+    comtab.parseJSON(JSON.parse(jsonConfInLocalStorage), tabMap)
+  } else {
+    comtab.createPane([tab1, tab2, tab3]).mount()
+    var pane = comtab.createPane([tab4]).setPosition({left: 200, top: 200}).mount()
+
+    var json = comtab.toJSON()
+
+    localStorage.setItem('JSONConf', JSON.stringify(json))
+
+    $('#JSONConfContent').text(JSON.stringify(json, 2))
+  }
+  
+  $('#clearJSONConf').on('click', function () {
+    localStorage.removeItem('JSONConf')
+  })
 </script>
