--- a/src/comtab.html
+++ b/src/comtab.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <!-- <link rel="stylesheet" href="https://apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css"> -->
+  <link rel="stylesheet" href="./vendor/jqueryui..min.css">
   <link rel="stylesheet" href="./comtab.css">
   <style>
     .gutter {
